--- a/homework/homework_2/src/main/resources/i18n/bundle_ru_RU.properties
+++ b/homework/homework_2/src/main/resources/i18n/bundle_ru_RU.properties
@@ -1,1 +1,2 @@
-greetings=Здравствуйте, студент. Введите свои имя и фамилию пожалуйста.
+greetings=\nЗдравствуйте, студент. Введите свои имя и фамилию пожалуйста.\n
+result=Студент %s %s, результат экзамена: %s/%s ( 
